# chess_manipulator

./: LEARN.md  LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
chess_manipulator/: RobotClass.py  controller.py  example_game.py  multi_point_controller.py
config/: controllers.yaml
description/: manipulator.control.xacro  manipulator.gazebo.urdf.xacro  manipulator.gazebo.xacro  manipulator.urdf.xacro  panda_arm.xacro  panda_arm_hand_world.urdf.xacro  panda_hand copy.xacro  panda_hand.xacro
launch/: inRviz.launch.py  simulation.launch.py
meshes/visual/: finger.dae  hand.dae  link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
models/chessboard/: chessboard.sdf  model.config
models/horseB1/: horseB1.sdf  model.config
models/horseB2/: horseB2.sdf  model.config
models/horseW1/: horseW1.sdf  model.config
models/horseW2/: horseW2.sdf  model.config
models/kingB/: kingB.sdf  model.config
models/kingW/: kingW.sdf  model.config
models/knightB1/: knightB1.sdf  model.config
models/knightB2/: knightB2.sdf  model.config
models/knightW1/: knightW1.sdf  model.config
models/knightW2/: knightW2.sdf  model.config
models/pawnB1/: model.config  pawnB1.sdf
models/pawnB2/: model.config  pawnB2.sdf
models/pawnB3/: model.config  pawnB3.sdf
models/pawnB4/: model.config  pawnB4.sdf
models/pawnB5/: model.config  pawnB5.sdf
models/pawnB6/: model.config  pawnB6.sdf
models/pawnB7/: model.config  pawnB7.sdf
models/pawnB8/: model.config  pawnB8.sdf
rviz/: config.rviz
worlds/: chesset.world
(+62 files in other folders)
