<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_manipulator</name>
  <version>0.0.0</version>
  <description>Franka Emika Panda manipulator playing chess</description>
  <maintainer email="zein.barhoum799@gmail.com">Zein Alabedeen Barhoum</maintainer>
  <maintainer email="rahafalshaowa98@gmail.com">Rahaf Alshaowa</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>